fixed spacing error

--- a/output.css
+++ b/output.css
@@ -255,10 +255,6 @@ ul {
   z-index: 1;
 }
 
-.timeshift-container {
-  padding-bottom: 1rem;
-}
-
 .ts-list {
   display: flex;
   flex-direction: column;
@@ -272,6 +268,7 @@ ul {
 
 .ts-row:last-child {
   border-bottom: none;
+  padding-bottom: 1rem;
 }
 
 .ts-left {
